# lidepub-rev

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt
lang/c/demo/basic/inner_product/util/: CMakeLists.txt  dlcconfig  lide_c_inner_product_driver.c  runtest
lang/c/demo/communication/channel_estimation/test_demo3/: CMakeLists.txt  README.txt  correct-output.txt  dlcconfig  lide_c_channel_estimation_driver.c  runme  runtest  subcarrier_freq_index.txt
lang/c/demo/communication/channel_estimation/test_demo3/dscconfig/: cprupdate
lang/c/demo/communication/channel_estimation/util/: CMakeLists.txt  README.txt  dlcconfig  lide_c_communication_channel_estimation_driver.c  runtest
lang/c/demo/communication/channel_estimation/util/dscconfig/: cprupdate
lang/c/demo/matrix_operation/: CMakeLists.txt  README.txt
lang/c/demo/matrix_operation/src/: README.txt
lang/c/demo/matrix_operation/src/actors/: README.txt  dlcconfig  lide_c_matrix_multiplication.c  lide_c_matrix_multiplication.h  lide_c_matrix_transpose.c  lide_c_matrix_transpose.h  makeme
lang/c/demo/matrix_operation/src/graph/: README.txt  dlcconfig  lide_c_matrix_graph.c  lide_c_matrix_graph.h
lang/c/demo/matrix_operation/test/: README.txt
lang/c/demo/matrix_operation/test/test-actors/test-matrix-multiplication/test_demo1/: correct-output.txt  lide_c_matrix_multiplication_actor_driver.exe.stackdump
lang/c/demo/matrix_operation/test/test-actors/test-matrix-multiplication/test_demo2/: README.txt  correct-output.txt  y.txt
lang/c/demo/matrix_operation/test/test-actors/test-matrix-multiplication/util/: dlcconfig  lide_c_matrix_multiplication_actor_driver.c  runtest
lang/c/demo/matrix_operation/test/test-actors/test-matrix-transpose/: README.txt
lang/c/demo/matrix_operation/test/test-actors/test-matrix-transpose/util/: dlcconfig  lide_c_matrix_transpose_actor_driver.c  runtest
lang/c/demo/matrix_operation/test/test-graph/: README.txt
lang/c/demo/matrix_operation/test/test-graph/test_demo1/: correct-output.txt  y.txt
lang/c/demo/matrix_operation/test/test-graph/test_demo2/: correct-output.txt
lang/c/demo/matrix_operation/test/test-graph/util/: dlcconfig  lide_c_matrix_graph_driver.c  runtest
lang/c/demo/matrix_operation/test/test-graph/util/dscconfig/: cprupdate
lang/ocl/demo/basic_demo/test_demo/util/: CMakeLists.txt  dloclconfig  lide_ocl_inner_product_driver.cpp  runtest
lang/ocl/demo/basic_demo/test_demo/util/dscconfig/: cprupdate
lang/ocl/src/gems/actors/basic/: CMakeLists.txt  README.txt  VECMULTI.cl  lide_ocl_file_sink.cpp  lide_ocl_file_sink.h  lide_ocl_file_source.cpp  lide_ocl_file_source.h  lide_ocl_inner_product.cpp
lang/ocl/src/gems/actors/basic/dscconfig/: cprupdate
lang/ocl/src/gems/graph/basic/: CMakeLists.txt  lide_ocl_inner_product_graph.cpp  lide_ocl_inner_product_graph.h  makeme
lang/ocl/src/gems/graph/basic/dscconfig/: cprupdate
test/test-lang/test-c/: CMakeLists.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/: README.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-add/: CMakeLists.txt  README.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-add/test01/: CMakeLists.txt  README.txt  makeme  runme  test.cpp
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-add/test02/: CMakeLists.txt  README.txt  correct-output.txt  makeme  runme  test.cpp  x.txt  y.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-add/util/: CMakeLists.txt  dlcconfig  lide_c_add_driver.c  lide_c_add_driver.h  runtest
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-block_add/: CMakeLists.txt  README.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-block_add/test01/: CMakeLists.txt  README.txt  makeme  runme  test.cpp
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-block_add/test02/: CMakeLists.txt  README.txt  correct-output.txt  makeme  runme  test.cpp  y.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-block_add/test03/: CMakeLists.txt  README.txt  correct-output.txt  makeme  runme  test.cpp  x.txt  y.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-block_add/util/: CMakeLists.txt  dlcconfig  lide_c_block_add_driver.c  runtest
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-inner_product/: README.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-inner_product/test01/: CMakeLists.txt  README.txt  runme  test.cpp
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-inner_product/test02/: CMakeLists.txt  README.txt  makeme  runme  test.cpp  y.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-inner_product/util/: CMakeLists.txt  README.txt  dlcconfig  lide_c_inner_product_driver.c  lide_c_inner_product_driver.h  maketest  runtest
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-src-snk/: CMakeLists.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-src-snk/test01/: CMakeLists.txt  README.txt  input.txt  makeme  runme  test-desc.txt  test.cpp
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-src-snk/util/: CMakeLists.txt  dlcconfig  lide_c_src_snk_driver.c  maketest  runtest
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-switch/: README.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-switch/test01/: CMakeLists.txt  makeme  runme  test.cpp
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-switch/test02/: CMakeLists.txt  README.txt  makeme  runme  test.cpp
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-switch/util/: CMakeLists.txt  dlcconfig  lide_c_switch_driver.c  maketest  runtest
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-table_lookup/: CMakeLists.txt  README.txt
test/test-lang/test-c/test-src/test-gems/test-actors/test-basic/test-table_lookup/test01/: CMakeLists.txt  makeme  (+4 more)
(+207 files in other folders)
