add_subdirectory(test-src/test-gems/test-actors/test-basic/test-add)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-block_add)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-inner_product/util)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-src-snk/util)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-switch/util)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-table_lookup/util)

add_subdirectory(test-src/test-gems/test-graph/test-basic/test-inner_product/util)