add_subdirectory(test-src/test-gems/test-actors/test-basic/test-add)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-block_add)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-inner_product)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-src-snk)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-switch)
add_subdirectory(test-src/test-gems/test-actors/test-basic/test-table_lookup)

add_subdirectory(test-src/test-gems/test-graph/test-basic/test-inner_product/util)